- JsonString を CharacterSequenceを実装するように変更 - JsonNumer を Number のサブクラスに変更 - setValue でセットしたもとのインスタンスを戻り値とするように変更